--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇩🇪 德国-2.57MB/s(Youtube:不良林), server: 193.108.118.30, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-5.20MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.12MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.48MB/s(Youtube:不良林), server: 134.195.198.95, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇨🇳 中国-582.8KB/s(Youtube:不良林), server: liantong.latiao.cyou, port: 26802, type: ss, cipher: chacha20-ietf-poly1305, password: 1ce78957-a1be-4c34-9169-74b90bc533e9}
-  - {name: 🇸🇬 新加坡-330.8KB/s(Youtube:不良林), server: sg-04.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-04.licom.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.40MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇩🇪 德国-489.1KB/s(Youtube:不良林), server: 52.58.249.78, port: 57824, type: ss, cipher: chacha20-ietf-poly1305, password: pryhyxya}
+  - {name: 🇨🇦 加拿大-2.82MB/s(Youtube:不良林), server: 38.111.114.246, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇸🇬 新加坡-293.7KB/s(Youtube:不良林), server: sg-04.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-04.licom.ml, skip-cert-verify: true}
   - {name: 🇬🇧 英国-3.40MB/s(Youtube:不良林), server: uk-manchester.eiw2eemo.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: uk-manchester.eiw2eemo.com}}
-  - {name: 🇬🇧 英国-2.88MB/s(Youtube:不良林), server: 146.70.46.68, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 146.70.46.68}}
+  - {name: 🇨🇳 中国-383.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-366.4KB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12001, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.81MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-9.19MB/s(Youtube:不良林), server: jp-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: jp-03.licom.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.06MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-877.4KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-582.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-330.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
       - 🇩🇪 德国-489.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-293.7KB/s(Youtube:不良林)
       - 🇬🇧 英国-3.40MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-383.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-366.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.19MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
+      - 🇬🇧 英国-877.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇩🇪 德国-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-582.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-330.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
       - 🇩🇪 德国-489.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-293.7KB/s(Youtube:不良林)
       - 🇬🇧 英国-3.40MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-383.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-366.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.19MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
+      - 🇬🇧 英国-877.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-582.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-330.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
       - 🇩🇪 德国-489.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-293.7KB/s(Youtube:不良林)
       - 🇬🇧 英国-3.40MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-383.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-366.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.19MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
+      - 🇬🇧 英国-877.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇩🇪 德国-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-582.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-330.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
       - 🇩🇪 德国-489.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-293.7KB/s(Youtube:不良林)
       - 🇬🇧 英国-3.40MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-383.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-366.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.19MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
+      - 🇬🇧 英国-877.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇩🇪 德国-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-582.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-330.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
       - 🇩🇪 德国-489.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-293.7KB/s(Youtube:不良林)
       - 🇬🇧 英国-3.40MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-383.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-366.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.19MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
+      - 🇬🇧 英国-877.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-582.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-330.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
       - 🇩🇪 德国-489.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-293.7KB/s(Youtube:不良林)
       - 🇬🇧 英国-3.40MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-383.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-366.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.19MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
+      - 🇬🇧 英国-877.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-582.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-330.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
       - 🇩🇪 德国-489.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-293.7KB/s(Youtube:不良林)
       - 🇬🇧 英国-3.40MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-383.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-366.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.19MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
+      - 🇬🇧 英国-877.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
