--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-359.5KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-1.08MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-15.96MB/s(Youtube:不良林), server: jp01-vm0.entry.rwesdhytjuftyhdafsdgfrh.club, port: 444, type: vmess, uuid: 0d5e36a4-e3ae-3728-a741-13e614c47d1f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: jp01-vm0.entry.rwesdhytjuftyhdafsdgfrh.club}}
+  - {name: 🇬🇧 英国-2.21MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.81MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.15MB/s(Youtube:不良林), server: 134.195.198.95, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇸🇬 新加坡-293.7KB/s(Youtube:不良林), server: sg-04.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-04.licom.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-13.06MB/s(Youtube:不良林), server: jp01-vm0.entry.rwesdhytjuftyhdafsdgfrh.club, port: 449, type: vmess, uuid: b7906b21-86b3-3644-806f-a11c48536e75, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: jp01-vm0.entry.rwesdhytjuftyhdafsdgfrh.club}}
-  - {name: 🇬🇧 英国-3.40MB/s(Youtube:不良林), server: uk-manchester.eiw2eemo.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: uk-manchester.eiw2eemo.com}}
   - {name: 🇸🇬 新加坡-3.82MB/s(Youtube:不良林), server: youtube.bai-piao-wang-zhe.567568.ml, port: 443, type: trojan, password: e88cb308-73f7-4302-89bf-b65c7386b117, sni: youtube.bai-piao-wang-zhe.567568.ml, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-4.85MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-4.94MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-359.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-15.96MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-293.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-13.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.40MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-4.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-4.94MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-359.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-15.96MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-293.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-13.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.40MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-4.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-4.94MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-359.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-15.96MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-293.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-13.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.40MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-4.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-4.94MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-359.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-15.96MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-293.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-13.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.40MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-4.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-4.94MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-359.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-15.96MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-293.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-13.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.40MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-4.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-4.94MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-359.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-15.96MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-293.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-13.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.40MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-4.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-4.94MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-359.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-15.96MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-293.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-13.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.40MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-4.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-4.94MB/s(Youtube:不良林)
