--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-15.96MB/s(Youtube:不良林), server: jp01-vm0.entry.rwesdhytjuftyhdafsdgfrh.club, port: 444, type: vmess, uuid: 0d5e36a4-e3ae-3728-a741-13e614c47d1f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: jp01-vm0.entry.rwesdhytjuftyhdafsdgfrh.club}}
-  - {name: 🇬🇧 英国-2.21MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.81MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.15MB/s(Youtube:不良林), server: 134.195.198.95, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇸🇬 新加坡-293.7KB/s(Youtube:不良林), server: sg-04.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-04.licom.ml, skip-cert-verify: true}
+  - {name: 🇹🇭 泰国-205.3KB/s(Youtube:不良林), server: 119.59.116.248, port: 17159, type: trojan, password: PHnvNV7HGp, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-3.53MB/s(Youtube:不良林), server: 146.56.110.129, port: 53702, type: vmess, uuid: d0ee8ec0-ef63-41aa-9087-11edf7a978b9, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.77MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.48MB/s(Youtube:不良林), server: 134.195.198.95, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇩🇪 德国-2.57MB/s(Youtube:不良林), server: 193.108.118.30, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇸🇬 新加坡-3.82MB/s(Youtube:不良林), server: youtube.bai-piao-wang-zhe.567568.ml, port: 443, type: trojan, password: e88cb308-73f7-4302-89bf-b65c7386b117, sni: youtube.bai-piao-wang-zhe.567568.ml, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-4.85MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-4.94MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, skip-cert-verify: true}
   - {name: 🇨🇳 中国-338.1KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65081, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
   - {name: 🇨🇳 中国-502.5KB/s(Youtube:不良林), server: 116.129.254.177, port: 65048, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-4.60MB/s(Youtube:不良林), server: ddns.0318.cyou, port: 12345, type: ss, cipher: chacha20-ietf-poly1305, password: 89ab8225-6873-45e9-b0e8-b8aebbfa9945}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-15.96MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-293.7KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-205.3KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.57MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-4.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-4.94MB/s(Youtube:不良林)
       - 🇨🇳 中国-338.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-502.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.60MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-15.96MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-293.7KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-205.3KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.57MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-4.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-4.94MB/s(Youtube:不良林)
       - 🇨🇳 中国-338.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-502.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.60MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-15.96MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-293.7KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-205.3KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.57MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-4.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-4.94MB/s(Youtube:不良林)
       - 🇨🇳 中国-338.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-502.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.60MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-15.96MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-293.7KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-205.3KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.57MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-4.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-4.94MB/s(Youtube:不良林)
       - 🇨🇳 中国-338.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-502.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.60MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-15.96MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-293.7KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-205.3KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.57MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-4.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-4.94MB/s(Youtube:不良林)
       - 🇨🇳 中国-338.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-502.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.60MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-15.96MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-293.7KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-205.3KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.57MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-4.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-4.94MB/s(Youtube:不良林)
       - 🇨🇳 中国-338.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-502.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.60MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-15.96MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-293.7KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-205.3KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.57MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-4.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-4.94MB/s(Youtube:不良林)
       - 🇨🇳 中国-338.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-502.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.60MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
